# quant

./: AGENTS.md  CLAUDE.md  task.txt
quant-system/: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
quant-system/apps/agent_orchestrator/: __init__.py  main.py
quant-system/apps/analysis_engine/: __init__.py
quant-system/apps/execution_engine/: __init__.py
quant-system/apps/market_data/: __init__.py
quant-system/apps/risk_engine/: __init__.py
quant-system/apps/strategy_registry/: __init__.py
quant-system/apps/strategy_runtime/: __init__.py  base.py  registry.py
quant-system/docs/architecture/: overview.md  risk_policy.md  tools.md
quant-system/docs/runbooks/: project_tour.md  shutdown.md  startup.md
quant-system/openclaw/: README.md
quant-system/openclaw/templates/: quant_tool_bridge.py
quant-system/openclaw/workspaces/: DEFERRED.md
quant-system/quant_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
quant-system/scripts/: demo_cycle.py  deploy_openclaw_workspaces.py  init_db.py  replay_events.py  seed_strategies.py  start_api_for_openclaw.py  startup_check.py
quant-system/shared/: __init__.py
quant-system/shared/config/: risk_policy.json  risk_policy.py  settings.py
quant-system/shared/constants/: market.py  versions.py
quant-system/shared/db/: base.py  session.py
quant-system/shared/models/: __init__.py  common.py  enums.py  tables.py
quant-system/shared/providers/: __init__.py  base.py
quant-system/shared/schemas/: base.py  error.py
quant-system/tests/: conftest.py  helpers.py
(+134 files in other folders)
